# meeting-intelligence

./: .env.example  .gitignore  AGENT_WORKFLOW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py  streamlit_run.py
app/: __init__.py  api.py  config.py  main.py  pipeline.py
app/graph/: __init__.py  build_graph.py  state.py
app/graph/nodes/: aggregate_output.py  bounded_qa.py  critique_confidence.py  extract_structured.py  human_review_gate.py  ingest.py  permission_filter.py  retrieve_context.py
app/llm/: __init__.py  extractor.py  llm_provider.py  mock_llm.py
app/permissions/: __init__.py  access_map.py
app/schemas/: __init__.py  meeting_record.py
app/tools/: __init__.py  notify_tool_mock.py  retriever_tool.py  ticket_tool_mock.py
artifacts/: steering_transcript.md
data/sample_docs/: deploy_checklist_cache.md  glossary_platform.md  prior_action_items_checkout.md
data/sample_transcripts/: sprint_sync_001.json
tests/: eval_checklist.md  test_confidence_routing.py  test_extraction.py  test_free_api_providers.py  test_llm_provider.py  test_permission_filter.py
