[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-intelligence"
version = "0.1.0"
description = "Agent-led meeting intelligence with LangGraph (bounded authority, privacy gates, HITL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-community>=0.3.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
llm = ["langchain-openai>=0.2.0"]

[project.scripts]
meeting-intel = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
